chore: messy update

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chip 8</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
     <!-- display -->
     <canvas id="display" width="640" height="320"></canvas>
 
@@ -15,5 +15,5 @@
 
     <!-- chip8 -->
     <script src="/js/sketch.js"></script>
-</body>
+  </body>
 </html>
