fix: label change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- VMEM -->
       <div class="vmem">
         <div class="top">
-          <span>VMEM</span>
+          <span>FRAME BUFFER</span>
           <button id="refresh" onclick="updateVmemDump()">refresh</button>
         </div>
         <pre><code id="vmem-dump"></code></pre>
@@ -38,7 +38,7 @@
       <!-- HEAP -->
       <div class="mem">
         <div class="top">
-          <span>HEAP</span>
+          <span>HEAP MEMORY</span>
           <button id="refresh" onclick="updateHeapDump()">refresh</button>
         </div>
         <pre><code id="heap-dump"></code></pre>
