--- a/index.html
+++ b/index.html
@@ -20,24 +20,17 @@
       <div class="disass">
         <div class="top">
           <span>DISASSEMBLY</span>
-          <button id="refresh" onclick="chip8Debugger.updateDisassembly()">
+          <button
+            id="refresh-disass"
+            onclick="chip8Debugger.updateDisassembly()"
+          >
             refresh
           </button>
-
-          <button
-            onclick="if(!chip8Debugger.started) { chip8Debugger.continueExecution(); this.innerText = 'stop'; } else if (chip8Debugger.started && !chip8.halt) { chip8Debugger.stopExecution(); this.innerText = 'continue'; } else if (chip8Debugger.started && chip8.halt) { chip8Debugger.continueExecution(); this.innerText = 'stop'; }"
-          >
-            start
-          </button>
-
-          <button onclick="chip8Debugger.stepInstruction()">
+          <button id="start-stop-continue">start</button>
+          <button id="step" onclick="chip8Debugger.stepInstruction()">
             step instruction
           </button>
-          <button
-            onclick="chip8Debugger.toggleAutoUpdate(); this.innerText = chip8Debugger.autoUpdate ? 'auto update is on' : 'auto update is off'"
-          >
-            auto update is on
-          </button>
+          <button id="auto-update">auto update is on</button>
         </div>
         <pre><code id="disass-dump"></code></pre>
       </div>
