--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <button id="refresh" onclick="chip8Debugger.updateVmemDump()">
             refresh
           </button>
+          <span id="vmem-md5" class="md5"></span>
         </div>
         <pre><code id="vmem-dump"></code></pre>
       </div>
@@ -64,6 +65,7 @@
           <button id="refresh" onclick="chip8Debugger.updateHeapDump()">
             refresh
           </button>
+          <span id="heap-md5" class="md5"></span>
         </div>
         <pre><code id="heap-dump"></code></pre>
       </div>
@@ -71,6 +73,10 @@
 
     <!-- p5 -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
+
+    <!-- md5 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
 
     <!-- chip8 -->
     <script src="/js/sketch.js"></script>
