fix: scroll only disass text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
           </button>
           <button id="auto-update">auto update is on</button>
         </div>
-        <pre><code id="disass-dump"></code></pre>
+
+        <div class="scroll">
+          <pre><code id="disass-dump"></code></pre>
+        </div>
       </div>
 
       <!-- REG & STACK -->
