chore: added pong, fixes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="display">
         <canvas id="display"></canvas>
         <div class="display__stats">
-          <span class="display__stats__fps">FPS</span>
+          <span class="display__stats__fps"></span>
           <button onclick="chip8.clearFrameBuffer()">clear</button>
         </div>
       </div>
